# OpenGLProjects

./: .gitignore
CUDA_Examples/: Andrew_GPUFractal.cu  Andrew_heatTransfer.cu
GPUFractal/: CMakeLists.txt  README.md  SimpleObject.cpp  Texture.cpp  main.cpp
GPUFractal/Shaders/: TexturedFragment.frag  TexturedVertex.vert
GPUFractal/cmake/modules/: FindGLFW3.cmake
GPUFractal/include/: Model.h  SimpleObject.h
GPUHeatTransfer/: CMakeLists.txt  Mesh.cpp  Shader.cpp  main.cpp
GPUHeatTransfer/Shaders/: GPUFract.comp  GPUHeatTransfer.comp  TexturedFragment.frag  TexturedVertex.vert
GPUHeatTransfer/cmake/modules/: FindASSIMP.cmake  FindGLEW.cmake  FindSOIL.cmake
GPUHeatTransfer/configuration/: visualstudio.vcxproj.user.in
GPUHeatTransfer/include/: Shader.h
LearnOpenGL/: .gitignore  CMakeLists.txt  Camera.cpp  LearnOpenGL  LearnOpenGLConfig.h  LearnOpenGLConfig.h.in  Model.cpp  Object.cpp  README.md  Shader.cpp  SimpleObject.cpp  Texture.cpp  main.cpp
LearnOpenGL/Shaders/: BasicFragmentYellow.frag  BasicVertex.vert  ColorVertexShift.vert  InvertedColorVertex.vert  LampFragment.frag  LitObjectFragment.frag  TexturedFragment.frag  TexturedVertex.vert  UniformColorFragment.frag
LearnOpenGL/cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
LearnOpenGL/include/: Camera.h  Object.h  Shader.h  SimpleObject.h  Texture.h
LearnOpenGLModels/: CMakeLists.txt  Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  SimpleObject.cpp  Texture.cpp  main.cpp
LearnOpenGLModels/Shaders/: BasicVertex.vert  ColorVertex.vert  ColorVertexShift.vert  InvertedColorVertex.vert  LampFragment.frag  LitObjectFragment.frag  TexturedFragment.frag  TexturedVertex.vert  UniformColorFragment.frag  model_loading.frag  model_loading.vert
LearnOpenGLModels/cmake/modules/: FindASSIMP.cmake
LearnOpenGLModels/include/: Camera.h  Mesh.h  Shader.h  SimpleObject.h  Texture.h
